initial syte checkin

--- a/syte/templates/base.html
+++ b/syte/templates/base.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="description" content="Personal website and blog of developer, designer and entrepreneur Rodrigo Neri also known as Rigo. Follow him at @rigoneri" />
-  <meta name="keywords" content="Rodrigo Neri, rigoneri, developer, designer, entrepreneur, instin, myhomework" />
+  <meta name="description" content="I'm Keith Entzeroth.  This is my personal website and blog. I'm an enterprise bred entrepreneur working on education apps for instin.  Follow me at @keithentzeroth" />
+  <meta name="keywords" content="Keith Entzeroth, entzeroth, keith, keithentzeroth, entrepreneur, instin, myhomework" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{% block pagetitle %}Rigo [Rodrigo Neri]{% endblock %}</title>
+  <title>{% block pagetitle %}Keith [Keith Entzeroth]{% endblock %}</title>
   <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   {% if DEV_DEPLOYMENT_MODE %}
   <link rel="stylesheet/less" type="text/css" href="{{ MEDIA_URL }}less/styles.less">
@@ -20,19 +20,16 @@
     <div class="picture">
       <a href="/" rel="home"></a>
     </div>
-    <h1>Rodrigo Neri</h1>
-    <h2>iOS & Web Developer + Designer + Entrepreneur Co-Founder of <a href="http://instin.com">Instin</a></h2>
+    <h1>Keith Entzeroth</h1>
+    <h2>Entrepreneur<br/>Web Developer<br/>Consultant</h2>
   </hgroup>
   <nav>
     <ul class="main-nav">
       <li><a href="/" id="home-link">Home</a></li>
-      <li><a href="http://twitter.com/#!/rigoneri" id="twitter-link">Twitter</a></li>
-      <li><a href="http://github.com/rigoneri" id="github-link">Github</a></li>
-      <li><a href="http://dribbble.com/rigoneri" id="dribbble-link">Dribbble</a></li>
-      <li><a href="mailto:contact@rigoneri.com?subject=Hello" id="contact-link">Contact</a></li>
+      <li><a href="http://twitter.com/#!/keithentzeroth" id="twitter-link">Twitter</a></li>
+      <li><a href="http://github.com/keithentzeroth" id="github-link">Github</a></li>
     </ul>
   </nav>
-  <a href="https://github.com/rigoneri/syte" class="fork-me">Fork me on Github</a>
 </header>
 {% block main_section %}{% endblock %}
 <div class="mobile-nav">
@@ -41,7 +38,7 @@
     <span class="nav-btn-bar"></span>
     <span class="nav-btn-bar"></span>
   </span>
-  <h3><a href="/">rigoneri.com</a></h3>
+  <h3><a href="/">keithentzeroth.com</a></h3>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script type="text/javascript">
